--- a/ru/assets/mobirise/css/mbr-additional.css
+++ b/ru/assets/mobirise/css/mbr-additional.css
@@ -3762,6 +3762,41 @@ a {
   width: 100%;
   object-fit: cover;
 }
+.cid-t1ALbjWiHD {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-t1ALbjWiHD .content-wrapper {
+  background: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-t1ALbjWiHD .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-t1ALbjWiHD .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-t1ALbjWiHD .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-t1ALbjWiHD .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-t1ALbjWiHD .content-wrapper .text-wrapper {
+    padding-left: 2rem;
+  }
+}
+.cid-t1ALbjWiHD .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
 .cid-sVyIeU2Ary {
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -23291,6 +23326,548 @@ a {
   }
 }
 .cid-t1nzzHX4MY .list {
+  list-style-type: none;
+  padding: 0;
+}
+.cid-t1AKwlHzqp {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-t1AKwlHzqp nav.navbar {
+  position: fixed;
+}
+.cid-t1AKwlHzqp .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-t1AKwlHzqp .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-t1AKwlHzqp .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-t1AKwlHzqp .dropdown-item:hover,
+.cid-t1AKwlHzqp .dropdown-item:focus {
+  background: #002469 !important;
+  color: white !important;
+}
+.cid-t1AKwlHzqp .dropdown-item:hover span {
+  color: white;
+}
+.cid-t1AKwlHzqp .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-t1AKwlHzqp .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-t1AKwlHzqp .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-t1AKwlHzqp .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-t1AKwlHzqp .nav-link {
+  position: relative;
+}
+.cid-t1AKwlHzqp .container {
+  display: flex;
+  margin: auto;
+}
+@media (min-width: 992px) {
+  .cid-t1AKwlHzqp .container {
+    flex-wrap: nowrap;
+  }
+}
+.cid-t1AKwlHzqp .iconfont-wrapper {
+  color: #002469 !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-t1AKwlHzqp .dropdown-menu,
+.cid-t1AKwlHzqp .navbar.opened {
+  background: #ffffff !important;
+}
+.cid-t1AKwlHzqp .nav-item:focus,
+.cid-t1AKwlHzqp .nav-link:focus {
+  outline: none;
+}
+.cid-t1AKwlHzqp .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-t1AKwlHzqp .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-t1AKwlHzqp .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-t1AKwlHzqp .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-t1AKwlHzqp .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-t1AKwlHzqp .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-t1AKwlHzqp .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #ffffff;
+}
+.cid-t1AKwlHzqp .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-t1AKwlHzqp .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-t1AKwlHzqp .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-t1AKwlHzqp .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-t1AKwlHzqp .navbar.collapsed {
+  justify-content: center;
+}
+.cid-t1AKwlHzqp .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-t1AKwlHzqp .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-t1AKwlHzqp .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-t1AKwlHzqp .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-t1AKwlHzqp .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-t1AKwlHzqp .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-t1AKwlHzqp .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-t1AKwlHzqp .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-t1AKwlHzqp .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-t1AKwlHzqp .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-t1AKwlHzqp .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-t1AKwlHzqp .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-t1AKwlHzqp .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-t1AKwlHzqp .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-t1AKwlHzqp .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-t1AKwlHzqp .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-t1AKwlHzqp .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-t1AKwlHzqp .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-t1AKwlHzqp .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-t1AKwlHzqp .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-t1AKwlHzqp .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-t1AKwlHzqp .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-t1AKwlHzqp .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-t1AKwlHzqp .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-t1AKwlHzqp .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-t1AKwlHzqp .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-t1AKwlHzqp .dropdown-item.active,
+.cid-t1AKwlHzqp .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-t1AKwlHzqp .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-t1AKwlHzqp .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-t1AKwlHzqp .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-t1AKwlHzqp .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #ffffff;
+}
+.cid-t1AKwlHzqp .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-t1AKwlHzqp .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-t1AKwlHzqp ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-t1AKwlHzqp .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-t1AKwlHzqp button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-t1AKwlHzqp button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-t1AKwlHzqp button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-t1AKwlHzqp button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-t1AKwlHzqp button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-t1AKwlHzqp button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-t1AKwlHzqp nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-t1AKwlHzqp nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-t1AKwlHzqp nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-t1AKwlHzqp nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-t1AKwlHzqp .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-t1AKwlHzqp a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-t1AKwlHzqp .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-t1AKwlHzqp .navbar {
+    height: 70px;
+  }
+  .cid-t1AKwlHzqp .navbar.opened {
+    height: auto;
+  }
+  .cid-t1AKwlHzqp .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-t1AKwm4MGW {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/logo-17-2000x704.jpeg");
+}
+.cid-t1AKwm4MGW .mbr-section-title {
+  text-align: right;
+  color: #002469;
+}
+.cid-t1AKwm4MGW .mbr-section-subtitle {
+  text-align: right;
+  color: #002469;
+}
+.cid-t1AKwmgI8C {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-t1AKwmzcUW {
+  padding-top: 0rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+.cid-t1AKwmzcUW .card:not(:nth-last-child(1)) {
+  margin-bottom: 2rem;
+}
+.cid-t1AKwmzcUW .card-wrapper {
+  background-color: #ffffff;
+  border-radius: 4px;
+}
+.cid-t1AKwmzcUW .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-t1AKwmzcUW .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #ff6666;
+  transition: all 0.3s;
+}
+.cid-t1AKwmzcUW .social-row .soc-item .mbr-iconfont {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #ff6666;
+  font-size: 1.5rem;
+  transition: all 0.3s;
+}
+.cid-t1AKwmzcUW .social-row .soc-item:hover {
+  background-color: #ff6666;
+}
+.cid-t1AKwmzcUW .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-t1AKwmzcUW .card-box {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-t1AKwmzcUW .card-box {
+    padding-right: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-t1AKwmzcUW .card-box {
+    padding-left: 2rem;
+    padding-right: 4rem;
+  }
+}
+.cid-t1AKwncKM2 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #232323;
+}
+.cid-t1AKwncKM2 .mbr-text,
+.cid-t1AKwncKM2 .mbr-section-btn {
+  color: #232323;
+}
+.cid-t1AKwncKM2 .btn {
+  width: 100%;
+}
+.cid-t1AKwncKM2 .mbr-section-btn {
+  margin-bottom: 1.2rem;
+}
+.cid-t1AKwncKM2 H1 {
+  color: #ffffff;
+}
+.cid-t1AKwnqJcW {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #232323;
+}
+@media (max-width: 767px) {
+  .cid-t1AKwnqJcW .content {
+    text-align: center;
+  }
+  .cid-t1AKwnqJcW .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-t1AKwnqJcW .map {
+  height: 18.75rem;
+}
+@media (max-width: 767px) {
+  .cid-t1AKwnqJcW .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-t1AKwnqJcW .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: 0.05;
+}
+.cid-t1AKwnqJcW .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-t1AKwnqJcW .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-t1AKwnqJcW .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-t1AKwnqJcW .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-t1AKwnqJcW .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-t1AKwnqJcW .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  margin-left: -7px;
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-t1AKwnqJcW .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-t1AKwnqJcW .social-list .soc-item {
+  margin: 0 0.5rem;
+}
+.cid-t1AKwnqJcW .social-list a {
+  margin: 0;
+  opacity: 0.5;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+.cid-t1AKwnqJcW .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-t1AKwnqJcW .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-t1AKwnqJcW .list {
   list-style-type: none;
   padding: 0;
 }
