--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1176,6 +1176,75 @@ a {
   list-style-type: none;
   padding: 0;
 }
+.cid-tuH4WIlIt9 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #232323;
+}
+.cid-tuH4WIlIt9 .showAlerts {
+  display: block !important;
+}
+.cid-tuH4WIlIt9 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-tuH4WIlIt9 .form-control {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.cid-tuH4WIlIt9 .input-group-btn .btn {
+  margin: 0 !important;
+}
+.cid-tuH4WIlIt9 a:not([href]):not([tabindex]) {
+  color: #fff;
+}
+.cid-tuH4WIlIt9 a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+@media (max-width: 768px) {
+  .cid-tuH4WIlIt9 .mbr-form .row {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .cid-tuH4WIlIt9 .form-group,
+  .cid-tuH4WIlIt9 .input-group-btn,
+  .cid-tuH4WIlIt9 .input-group-btn .btn {
+    max-width: 300px;
+    width: 100%;
+  }
+  .cid-tuH4WIlIt9 .rcpContainer {
+    margin-top: 1rem !important;
+  }
+}
+.cid-tuH4WIlIt9 .mbr-section-terms {
+  text-align: center;
+  margin-bottom: 0px;
+}
+.cid-tuH4WIlIt9 .alert {
+  margin-bottom: 0;
+}
+.cid-tuH4WIlIt9 .alert-success {
+  background-color: #70c770;
+}
+.cid-tuH4WIlIt9 .alert-danger {
+  background-color: #ff4a52;
+}
+.cid-tuH4WIlIt9 .rcpContainer {
+  width: 304px;
+  margin: 0 auto;
+}
+.cid-tuH4WIlIt9 .mbr-alert-success {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-tuH4WIlIt9 .mbr-alert-danger {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-tuH4WIlIt9 H2 {
+  color: #ffffff;
+}
 .cid-sTVx9WNtwN {
   z-index: 1000;
   width: 100%;
